# patchcore-ad

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml  ci.yml
bundled_weights/: bundled_weights_README.txt
patchcore/: __init__.py  coreset_sampler.py  dataset.py  feature_extractor.py  metrics.py  nearest_neighbor_index.py  patchcore.py
patchcore_gui/: __init__.py  history_types.py  main_window.py  settings_dialog.py  utils.py  workers.py
scripts/: download_weights.py
tests/: conftest.py  test_coreset_sampler.py  test_dataset.py  test_feature_extractor.py  test_metrics.py  test_nearest_neighbor_index.py  test_patchcore_integration.py
