[project]
name = "patchcore-realization"
version = "0.1.0"
description = "PatchCore custom implementation"
authors = [
    {name = "Renat", email = "ronaldo@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13,<3.15"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pillow = ">=12.1.1,<13.0.0"
numpy = ">=2.4.2,<3.0.0"
scipy = ">=1.17.1,<2.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
matplotlib = "^3.10.8"

# -- GPU-версия: для локальной разработки --
pandas = "^3.0.2"
openpyxl = "^3.1.5"
[tool.poetry.group.torch-gpu]
optional = true

[tool.poetry.group.torch-gpu.dependencies]
torch = {version = "2.10.0+cu126", source = "pytorch-cu126"}
torchvision = {version = "0.25.0+cu126", source = "pytorch-cu126"}

# -- CPU-версия: только для CI --
#[tool.poetry.group.torch-cpu]
#optional = true
#
#[tool.poetry.group.torch-cpu.dependencies]
#torch = {version = "*", source = "pytorch-cpu"}
#torchvision = {version = "*", source = "pytorch-cpu"}

# -- Dev: pytest и покрытие --
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pyqt6 = "^6.9.0"
opencv-python-headless = "^4.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

# -- Новый источник: CPU-колесо для CI --
#[[tool.poetry.source]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#priority = "explicit"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]